--- a/_posts/2022-03-20-class.markdown
+++ b/_posts/2022-03-20-class.markdown
@@ -16,7 +16,7 @@ public class Exam03 {
 </code>
 </pre>
 위와 같은 Exam03클래스에 Animal cat = new Animal(); 을 작성하면 객체를 만들 수 있다  new는 객체를 생성할 때 사용하는 키워드로 Exam03클래스에 객체인 cat을 생성할 수 있다.   
-2.객체변수
+2.객체변수.  
 객체변수란 클래스 내부에서 선언된 변수를 의미한다
 <pre>
 <code>
@@ -42,7 +42,7 @@ public class A {
 </pre>
 위 코드를 실행하면 대입한 bean이 출력된다 
 (만약 아래와 같이 객체변수를 선언했지만 아무런 값도 대입하지 않았다면 null이라는 값이 출력된다 ).  
-3.메소드
+3.메소드.  
 메소드란 클래스내에 구현된 함수로 중복되는 코드의 반복적인 프로그래밍을 피할 수 있기 때문에 사용한다 메소드의 구조는
 <pre>
 <code>
